[project]
name            = "psx-spx"
version         = "0.1.0"
description     = "PlayStation specifications"
authors         = []
requires-python = ">= 3.10"
dependencies    = [
    "mkdocs          >= 1.1.2",
    "mkdocs-material >= 6.2.4",
    "mkdocs-with-pdf >= 0.8.3"
]

[build-system]
requires      = [ "poetry >= 0.12" ]
build-backend = "poetry.masonry.api"
