[project]
name            = "fix-html-images"
version         = "0.1.0"
description     = "MkDocs plugin to fix relative URLs in HTML-in-Markdown images"
authors         = [ { name = "spicyjpeg" } ]
requires-python = ">= 3.10"

[project.entry-points."mkdocs.plugins"]
fix-html-images = "plugin:FixHTMLImagesPlugin"
